Layout changes in main page as per Andrews suggestions.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -100,7 +100,7 @@
     <div id="mid-container">
         <div class="content row">
             <div class="nine columns">
-                <div class="row full no-v-padding">
+                <div class="row full no-top-padding">
                     <div class="video featured shade" id="featuredvideo">
                         <div class="viewport">
                             <img src="images/main.png">
@@ -120,38 +120,132 @@
                         </div>
                     </div>
                 </div>
-                <div class="row full">
-                    <div class="eight columns">
-                        <div class="featured-content">
-                            <a href="#">
-                                <img class="featured-image" src="images/image_mini_2.png">
-                                <span class="featured-text">
-                                
-                                    <h5>
-                                        World Press Freedom Day: The Ultimate Faq
-                                    </h5>
-                                    International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. 
-                                
-                                </span>
-                            </a>
-                        </div>
-                    </div>
 
-                    <div class="four columns">
-                        <div class="featured-filmmaker">
-                            <a href="#">
-                                <img class="featured-image" src="images/image_mini.png">
-                                <span class="featured-text">
-                                    <h5>Featured Filmmaker: </h5>
-                                    Sathis Kumar Krishnan
-                                </span>
-                            </a>
+                <div class="full row no-v-padding row-title"><h4>Latest Videos</h4></div>
+                <div class="row" id="latestvideos">
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v1.png">
+                        </div>
+                        <div class="under">
+                            <h5>Tembok Bolong</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
                         </div>
                     </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v2.png">
+                        </div>
+                        <div class="under">
+                            <h5>The Last Hunter</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v3.png">
+                        </div>
+                        <div class="under">
+                            <h5>Buruh Migran</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v1.png">
+                        </div>
+                        <div class="under">
+                            <h5>Tembok Bolong</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v3.png">
+                        </div>
+                        <div class="under">
+                            <h5>Buruh Migran</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v2.png">
+                        </div>
+                        <div class="under">
+                            <h5>The Last Hunter</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v1.png">
+                        </div>
+                        <div class="under">
+                            <h5>Tembok Bolong</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v3.png">
+                        </div>
+                        <div class="under">
+                            <h5>Buruh Migran</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="four columns video tablet-one">
+                        <div class="viewport shade">
+                            <img src="images/v2.png">
+                        </div>
+                        <div class="under">
+                            <h5>The Last Hunter</h5>
+                        </div>
+                        <div class="rollover">
+                            In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
+                        </div>
+                    </div>
+                    <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
                 </div>
+
             </div>
 
+
             <div class="three columns news sidebar">
+                <div class="sidebar-section light-shade">
+                    <div class="featured-filmmaker">
+                        <a href="#">
+                            <img class="featured-image" src="images/image_mini_2.png">
+                            <span class="featured-text">
+                                <h5>Featured Item </h5>
+                                International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day. 
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="sidebar-section social-networks">
+                    <span>Stay in touch!</span>
+                    <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
+                    <a href="http://www.facebook.com/group.php?gid=43640854087" target="_blank"><div class="fb"></div></a>
+                </div>
+
                 <div class="sidebar-section shade">
                     <div class="column-title">
                         <span class="column-title-icon"></span>
@@ -163,15 +257,7 @@
                         <li><a href="#"><p class="date">July, 01</p><h5>Competition: Bhinneka Tinggal Duka</h5></a></li>
                     </ul>
                 </div>
-                <div class="sidebar-section shade">
-                    <div class="column-title ">
-                        <span class="column-title-icon"></span>
-                        <h4 id="blogs-title">Staff Blog</h4>
-                    </div>
-                    <ul id="blogs-right-portlet">
-                        <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
-                    </ul>
-                    </div>
+
                 <div class="sidebar-section shade">
                     <span class="column-title-icon"></span>
                     <div class="column-title ">
@@ -184,108 +270,63 @@
                         <li><a href="#"><p class="date">July, 02</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
                     </ul>
                 </div>
-
-                <div class="sidebar-section social-networks">
-                    <span>Stay in touch!</span>
-                    <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
-                    <a href="http://www.facebook.com/group.php?gid=43640854087" target="_blank"><div class="fb"></div></a>
+            </div>
+        </div>
+        <div class="full row no-v-padding row-title"><h4>EngageMedia.org</h4></div>
+        <div class="content row">
+            <div class="three columns sidebar">
+                <div class="sidebar-section shade">
+                    <div class="column-title">
+                        <h4 id="blogs-title">Staff Blog</h4>
+                    </div>
+                    <ul id="blogs-right-portlet">
+                        <li><a href="#"><p class="date">May, 16</p><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="three columns sidebar">
+                <div class="sidebar-section shade">
+                    <div class="column-title">
+                        <h4 id="blogs-title">Projects</h4>
+                    </div>
+                    <ul id="blogs-right-portlet">
+                        <li><a href="#"><h5>Technology</h5></a></li>
+                        <li><a href="#"><h5>Research & Publications</h5></a></li>
+                        <li><a href="#"><h5>Content & Compilations</h5></a></li>
+                        <li><a href="#"><h5>Network Building & Training</h5></a></li>
+                        <li><a href="#"><h5>Translations</h5></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="three columns sidebar">
+                <div class="sidebar-section shade">
+                    <div class="column-title">
+                        <h4 id="blogs-title">Project Logos</h4>
+                    </div>
+                    <ul id="blogs-right-portlet">
+                        <li><a href="#"><h5>Content?</h5></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="three columns sidebar">
+                <div class="sidebar-section shade">
+                    <div class="column-title">
+                        <h4 id="blogs-title">About Us</h4>
+                    </div>
+                    <ul id="blogs-right-portlet">
+                        <li><h5>Editorial Policy</h5></a></li>
+                        <li><h5>Help</h5></a></li>
+                        <li><h5>Support Us</h5></a></li>
+                        <li><h5>Get Involved</h5></a></li>
+                        <li><h5>Donate</h5></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="row no-v-padding row-title"><h4>Latest Videos</h4></div>
-        <div class="content row" id="latestvideos">
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v1.png">
-                    </div>
-                    <div class="under">
-                        <h5>Tembok Bolong</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v2.png">
-                    </div>
-                    <div class="under">
-                        <h5>The Last Hunter</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v3.png">
-                    </div>
-                    <div class="under">
-                        <h5>Buruh Migran</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v1.png">
-                    </div>
-                    <div class="under">
-                        <h5>Tembok Bolong</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v3.png">
-                    </div>
-                    <div class="under">
-                        <h5>Buruh Migran</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v2.png">
-                    </div>
-                    <div class="under">
-                        <h5>The Last Hunter</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v1.png">
-                    </div>
-                    <div class="under">
-                        <h5>Tembok Bolong</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="three columns video tablet-one">
-                    <div class="viewport shade">
-                        <img src="images/v3.png">
-                    </div>
-                    <div class="under">
-                        <h5>Buruh Migran</h5>
-                    </div>
-                    <div class="rollover">
-                        In 1990 The Wasur National Park in Merauke was made to protect the biodiversity and empower the local inhabitants.
-                    </div>
-                </div>
-                <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
-        </div>
     </div>
+
     <div class="row separate-thick"></div>
+
     <div id="lower-container">
         <div class="row footer">
             <div class="six columns">
