restructure rules file

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -28,9 +28,8 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <style>
-        #portal-advanced-search, #portal-searchbox label, div.searchSection, input.searchButton {display: none}
-    </style>
+    <span id="css"></span>
+
 </head>
 <body>
     <div id="upper-container">
