--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -28,10 +28,9 @@
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <style>
-        #portal-advanced-search, #portal-searchbox label, div.searchSection, input.searchButton {display: none}
-    </style>
+    
+    <span id="css"></span>
+    
 </head>
 <body>
     <div id="upper-container">
