added ids to drop down menus on header

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -44,7 +44,7 @@
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
                 <div class="four columns menu">
-                    <ul class="header-menu-item">
+                    <ul class="header-menu-item" id="user-menu">
                         <li class="header-button">
                             <a href="#" class="english language"></a>
                         </li>
@@ -59,7 +59,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <ul class="header-menu-item">
+                    <ul class="header-menu-item" id="language-menu">
                         <li class="header-button">
                             <a href="#" class="user">
                                 User
