fix commenting on video page

--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -103,7 +103,7 @@
             <div class="eight columns">
                 <div class="full row no-top-padding">
                     <div id="video-title" class="light-shade">
-                        Witch Hunt Online
+                        <h1>Witch Hunt Online</h1>
                     </div>
                 </div>
                 <div class="full row no-v-padding">
@@ -136,7 +136,7 @@
                         <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                     </div>
                 </div>
-                <div class="full row no-v-padding">
+                <div id="video-comments" class="full row no-v-padding">
                     <div class="sidebar-section shade">
                         <div class="column-title light-shade">
                             <a href="#">
