improve video view page

--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -123,6 +123,12 @@
                     <div id="description">
                         <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                     </div>
+                    <div class="more">
+                        Show more
+                    </div>
+                    <div id="full-description"></div>
+                </div>
+                <div class="full row no-v-padding sidebar">
                 </div>
                 <div class="full row no-v-padding">
                     <div class="column-title light-shade">
