--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -43,7 +43,7 @@
                 <div class="three columns offset-by-one search">
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EngageMedia">
                 </div>
-                <div class="four columns menu">
+                <div class="six columns menu">
                     <ul class="header-menu-item" id="language-menu">
                         <li class="header-button">
                             <a href="#" class="english language"></a>
