add edit bar, logo link, fix related videos

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -35,8 +35,8 @@
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
-                <div class="one column main-logo"></div>
-                <div class="three columns main-title">
+                <a href="#" class="main-logo-link"><div class="one column main-logo"></div></a>
+                <a href="#" class="main-title-link"><div class="three columns main-title"></a>
                     <h2>EngageMedia</h2>
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
