--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -36,8 +36,8 @@
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
-                <div class="one column main-logo"></div>
-                <div class="three columns main-title">
+                <a href="#" class="main-logo-link"><div class="one column main-logo"></div></a>
+                <a href="#" class="main-title-link"><div class="three columns main-title"></a>
                     <h2>EngageMedia</h2>
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="full row no-v-padding sidebar">
+                <div class="full row no-v-padding">
                     <div id="description">
                         <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                     </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div id="full-description"></div>
                 </div>
-                <div class="full row no-v-padding sidebar">
+                <div class="full row no-v-padding">
                 </div>
                 <div class="full row no-v-padding">
                     <div class="column-title light-shade">
@@ -137,7 +137,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="full row">
+                <div class="full row no-v-padding">
                     <div id="video-info">
                         <p>International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </p>
                     </div>
