use navigation portlet to display the about us footer tree

--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -145,7 +145,7 @@ There are over AUD1000 in prizes and winners will be invited to a master class o
             
             <div class="three columns offset-by-three">
                 <h5>About Us</h5>
-                <ul>
+                <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
                     <li>Support Us</li>
