--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -249,7 +249,7 @@
             
             <div class="three columns offset-by-three">
                 <h5>About Us</h5>
-                <ul>
+                <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
                     <li>Support Us</li>
